<resources>
    <string name="app_name">BLE Scanner</string>
    <string name="scan">SCAN</string>
    <string name="stop">STOP</string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="device_name">Device Name</string>
    <string name="mac_address">Mac Address</string>
    <string name="timestamp">Timestamp</string>
    <string name="rssi">Rssi</string>
    <string name="stop_scan">Scan stopped</string>
    <string name="start_scan">Scan started</string>
    <string name="disconnect">Disconnect</string>

    <string name="ble_not_supported">BLE not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="message_permission_granted">Permission granted</string>
    <string name="message_not_connected">BLE device could not connected</string>
    <string name="message_connected">BLE device connected</string>
    <string name="message_disconnected">BLE device disconnected</string>
    <string name="message_discovered">Gatt Services discovered</string>
</resources>