<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="bleDevice"
            type="com.example.myapplication.data.BLEDevice" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/textViewDeviceName"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@{bleDevice.order + `. Device Name: `+ bleDevice.deviceName}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/device_name" />

        <TextView
            android:id="@+id/textViewMacAddress"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@{`MAC Address: `+ bleDevice.macAddress}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDeviceName"
            tools:text="@string/mac_address" />

        <TextView
            android:id="@+id/textViewTimestamp"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@{`Timestamp: `+ bleDevice.timestamp}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMacAddress"
            tools:text="@string/timestamp" />

        <TextView
            android:id="@+id/textViewRssi"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@{`Rssi: `+ bleDevice.rssi}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonConnect"
            app:layout_constraintTop_toBottomOf="@+id/textViewTimestamp"
            tools:text="@string/rssi" />

        <Button
            android:id="@+id/buttonConnect"
            style="@style/StyleButtonConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@{bleDevice.isConnected ? @color/color_passive : @color/color_active}"
            app:connected="@{bleDevice.isConnected}"
            app:layout_constraintBottom_toBottomOf="@+id/textViewRssi"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewRssi"
            app:layout_constraintWidth_percent="0.4"
            tools:text="@string/connect"
            tools:textColor="@color/color_active" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@color/color_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRssi" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>