<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="detail"
            type="com.example.myapplication.data.BLEDeviceDetail" />

        <variable
            name="sharedViewModel"
            type="com.example.myapplication.viewModel.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.DetailFragment">

        <Button
            android:id="@+id/buttonDisconnect"
            style="@style/StyleButtonConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/disconnect"
            android:textColor="@color/color_passive"
            app:layout_constraintBottom_toTopOf="@+id/textViewMacAddress"
            app:layout_constraintLeft_toRightOf="@+id/textViewDeviceName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationZ="100dp"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/textViewDeviceName"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@{`Device Name: `+ detail.deviceName}"
            app:layout_constraintBottom_toBottomOf="@+id/buttonDisconnect"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonDisconnect"
            app:layout_constraintTop_toTopOf="@+id/buttonDisconnect"
            tools:text="@string/device_name" />

        <TextView
            android:id="@+id/textViewMacAddress"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@{`MAC Address: `+ detail.macAddress}"
            app:layout_constraintBottom_toTopOf="@+id/textViewGattServices"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDisconnect"
            tools:text="@string/mac_address" />

        <TextView
            android:id="@+id/textViewGattServices"
            style="@style/StyleText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:scrollbars="vertical"
            android:text="@{`Gatt Services: `+ sharedViewModel.getDetailText(detail.gattServices)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMacAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>